[package]
name = "halo2-lib-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = {default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/mmjahanara/halo2-lib.git"}

halo2-ecc = {default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/mmjahanara/halo2-lib.git"}

poseidon = {git = "https://github.com/mmjahanara/halo2-lib.git"}


rand = "0.8"
ff = "0.13"

serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"


[patch.'https://github.com/privacy-scaling-explorations/halo2curves']
halo2curves = { git = 'https://github.com/mmjahanara/halo2curves.git' }
